add schema.sql for database structure and initial data

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,7 +3,7 @@ repos :
     hooks: 
       - id : pylint
         name : pylint
-        entry : pylint
+        entry : .venv/Scripts/python.exe -m pylint
         language : system
         types : [python]
         args : 
