improvement : Adding interfaces in repositoreis

--- a/.pylintrc
+++ b/.pylintrc
@@ -10,7 +10,10 @@ disable =
       C0301 , # line too long 
       C0304 , # missing-final-newline 
       C0303 , # trailing line space 
-      R0903 # too-few-public-methods 
+      R0903 , # too-few-public-methods 
+      C0305 , # Trailing newlines (trailing-newlines)
+
+      
 # Analyse import fallback blocks. This can be used to support both Python 2 and
 # 3 compatible code, which means that the block might have code that exists
 # only in one or another interpreter, leading to false positives when analysed.
