feat : PersonCreatorController with create person and add person to database logic implementation

--- a/.pylintrc
+++ b/.pylintrc
@@ -12,6 +12,7 @@ disable =
       C0303 , # trailing line space 
       R0903 , # too-few-public-methods 
       C0305 , # Trailing newlines (trailing-newlines)
+      W0719 , # broad-exception-raised
 
       
 # Analyse import fallback blocks. This can be used to support both Python 2 and
