config : adding flask and flask-cors to project

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,7 @@
 {
     "files.exclude": {
         "**/.git": true,
-        "**.txt": true,
+        "**.txt": false,
         "**.db": true,
         "**/.gitignore": true,
         "**/.pylintrc": true,
