--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,7 +4,7 @@
         "**.txt": false,
         "**.db": true,
         "**/.gitignore": true,
-        "**/.pylintrc": true,
+        "**/.pylintrc": false,
         "**/.pre-commit-config.yaml": true,
         "**/.svn": true,
         "**/.hg": true,
